# tsuku

./: .gitignore  CHANGELOG.md  Makefile  README.md  dune-project  go.mod  go.sum  main.go  tsuku.cabal
app/: Main.hs  Switch.hs
app/cli/: Cli.hs
app/switch/: Switch.hs
cmd/: root.go
cmd/switches/: data.go  install.go  list.go  switch.go
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/tmp/environment.-16389/: .ghc.environment.aarch64-darwin-9.4.7
lib/: command.ml  dune
src/: Cli.hs  Config.hs  Manifest.hs  Package.hs  Run.hs
test/: dune
utils/list/: list.go
utils/result/: result.go
