cabal-version:      3.4
name:               tsuku
version:            0.1.0.0
synopsis:           Experimental package manager for the Koka programming language.
description:        Experimental package manager for the Koka programming language.
license:            BSD-3-Clause
author:             Tazmilur Saad
maintainer:         ssaad@colgate.edu
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable tsuku
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>= 4.17.2.0,
        wreq ^>= 0.5.4.2,
        lens ^>= 5.2.3,
        text ^>= 2.0.2,
        bytestring ^>= 0.11.5.2,
        lens-aeson ^>= 1.2.3,
        http-types ^>= 0.12.3

    other-modules: Switch
    hs-source-dirs:   app
    default-language: GHC2021
