cabal-version:      3.4
name:               tsuku
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Tazmilur Saad
maintainer:         ssaad@colgate.edu
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Config,
                      Cli,
                      Manifest,
                      Run,
                      Package
    -- other-modules:
    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.17.2.0,
                      directory >= 1.3.7 && < 1.4,
                      optparse-applicative >= 0.18,
                      wreq >= 0.5.4.3,
                      lens,
                      aeson,
                      lens-aeson,
                      bytestring,
                      text,
                      tomland
    hs-source-dirs:   src
    default-language: GHC2021

executable tsuku
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        tsuku

    hs-source-dirs:   app
    default-language: GHC2021
